--- a/contoh.html
+++ b/contoh.html
@@ -1,36 +1,36 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
+<!DOCTYPE HTML>
 <html>
 <head>
 	<title></title>
 </head>
 <body>
-<div style="text-align: justify">Deskripsi :<br />
-Jintan Hitam / Habbatussauda / dengan nama kerennya Nigella Sativa adalah tumbuhan semak belukar yang mempunyai tinggi tegak kurang lebih sekitar 50-70 cm berdiameter seperti &nbsp;berdaun runcing, bergaris dan barcabang, menyebar dan saling &nbsp;berhadapan, berbulu halus berbunga putih kekuningan. Biji Jinten Hitam berbentuk seperti kapsul yang berwarna biru tua keunguan lebih mendekati hitam dengan ukuran kecil dan pendek kurang lebih 1-2 mm dengan buah yang pahit.serta memiliki aroma yang khassekali. Tumbuhan ini tumbuh liar setiap musim di beberapa daerah di utara Afrika, Asia dan Arab. Jinten hitam merupakan tanaman herbal yang bisa dimanfaatkan sebagai obar, baik secara tunggal maupun dicampur dengan tanaman herbal lainnya.</div>
-<br />
-<div class="separator" style="text-align: center; clear: both"><a href="https://2.bp.blogspot.com/-0OvJd8lzXao/WhaoKLSPL1I/AAAAAAAAAGU/raPUCvkOzmQUz2F9RkLZKotylCrAPkVzgCLcBGAs/s1600/Jinten_Hitam.jpg" imageanchor="1" style="margin-left: 1em; margin-right: 1em"><img border="0" data-original-height="318" data-original-width="437" height="232" src="https://2.bp.blogspot.com/-0OvJd8lzXao/WhaoKLSPL1I/AAAAAAAAAGU/raPUCvkOzmQUz2F9RkLZKotylCrAPkVzgCLcBGAs/s320/Jinten_Hitam.jpg" width="320" /></a></div>
+<p align="justify">Deskripsi :<br>
+Jintan Hitam / Habbatussauda / dengan nama kerennya Nigella Sativa adalah tumbuhan semak belukar yang mempunyai tinggi tegak kurang lebih sekitar 50-70 cm berdiameter seperti &nbsp;berdaun runcing, bergaris dan barcabang, menyebar dan saling &nbsp;berhadapan, berbulu halus berbunga putih kekuningan. Biji Jinten Hitam berbentuk seperti kapsul yang berwarna biru tua keunguan lebih mendekati hitam dengan ukuran kecil dan pendek kurang lebih 1-2 mm dengan buah yang pahit.serta memiliki aroma yang khassekali. Tumbuhan ini tumbuh liar setiap musim di beberapa daerah di utara Afrika, Asia dan Arab. Jinten hitam merupakan tanaman herbal yang bisa dimanfaatkan sebagai obar, baik secara tunggal maupun dicampur dengan tanaman herbal lainnya.</p>
 
-<div style="text-align: center">Tanaman herbal Jintan Hitam</div>
-<br />
-Beberapa khasiat dari Jinten Hitam :<br />
-1. Menetralisir racun didalam tubuh<br />
-2. Membasmi bakteri negatif pada saluran pencernaan<br />
-3. Meningkatkan konsentrasi otak<br />
-4. Mengatasi diabetes<br />
-5. Mengontrol kestabilan didalam tubuh<br />
-6. Meningkatkan daya kekebalan tubuh<br />
-7. Menyembuhkan asma dan alergi<br />
-8. Menurunkan tekanan darah tinggi<br />
-9. Membantu melawan Kanker Usus Besar<br />
-10. Meredakan gangguan perut<br />
-11. Mengobati peradangan<br />
-12. Meningkatkan ASI<br />
-13. Merupakan sumber nutrisi penting<br />
-<br />
-&nbsp;
-<div style="text-align: justify">Referensi :<br />
-Diriwayatkan dari Aisyah, Rasullah SAW bersabda :<br />
-<i>&quot;Sesungguhnya al-Habbah as-Sauda ini adalah kesembuhan (obat) dari setiap penyakitu kecuali dari as-saam&quot;.</i> Kataku (Aisyah) : <i>&quot;Apa itu as-saam?&quot;,</i> Rasulullah SAW menjawab : <i>&quot;Kematian&quot;.</i><br />
-Diriwayatkan dari Ummu Salamah dan Abu Hurairah R.A, bahwa Rasulullah SAW bersabda :<br />
-<i>&quot;Di dalam al-Habbah as-Sauda itu ada kesembuhan (obat) bagi setiap penyakit, kecuali as-saam&quot;,</i> Ibn Syhab berkata <i>&quot;as-saam itu adalah kematian dan al-Habbah as-Sauda itu adalah as-Syuniz (nama lain dari al-Habbah as-Sauda/Jintan Hitam).</i></div>
+<p align="center"><a href="https://2.bp.blogspot.com/-0OvJd8lzXao/WhaoKLSPL1I/AAAAAAAAAGU/raPUCvkOzmQUz2F9RkLZKotylCrAPkVzgCLcBGAs/s1600/Jinten_Hitam.jpg" imageanchor="1" style="margin-left: 1em; margin-right: 1em"><img border="0" data-original-height="318" data-original-width="437" height="232" src="https://2.bp.blogspot.com/-0OvJd8lzXao/WhaoKLSPL1I/AAAAAAAAAGU/raPUCvkOzmQUz2F9RkLZKotylCrAPkVzgCLcBGAs/s320/Jinten_Hitam.jpg" width="320" /></a><br>
+Tanaman herbal Jintan Hitam</p>
+
+<p>
+Beberapa khasiat dari Jinten Hitam :<br>
+1. Menetralisir racun didalam tubuh<br>
+2. Membasmi bakteri negatif pada saluran pencernaan<br>
+3. Meningkatkan konsentrasi otak<br>
+4. Mengatasi diabetes<br>
+5. Mengontrol kestabilan didalam tubuh<br>
+6. Meningkatkan daya kekebalan tubuh<br>
+7. Menyembuhkan asma dan alergi<br>
+8. Menurunkan tekanan darah tinggi<br>
+9. Membantu melawan Kanker Usus Besar<br>
+10. Meredakan gangguan perut<br>
+11. Mengobati peradangan<br>
+12. Meningkatkan ASI<br>
+13. Merupakan sumber nutrisi penting<br>
+</p>
+
+<p align="justify">Referensi :<br>
+Diriwayatkan dari Aisyah, Rasullah SAW bersabda :<br>
+<i>&quot;Sesungguhnya al-Habbah as-Sauda ini adalah kesembuhan (obat) dari setiap penyakitu kecuali dari as-saam&quot;.</i> Kataku (Aisyah) : <i>&quot;Apa itu as-saam?&quot;,</i> Rasulullah SAW menjawab : <i>&quot;Kematian&quot;.</i><br>
+Diriwayatkan dari Ummu Salamah dan Abu Hurairah R.A, bahwa Rasulullah SAW bersabda :<br>
+<i>&quot;Di dalam al-Habbah as-Sauda itu ada kesembuhan (obat) bagi setiap penyakit, kecuali as-saam&quot;,</i> Ibn Syhab berkata <i>&quot;as-saam itu adalah kematian dan al-Habbah as-Sauda itu adalah as-Syuniz (nama lain dari al-Habbah as-Sauda/Jintan Hitam).</i></p>
 </body>
 </html>
