--- a/jintanhitam.html
+++ b/jintanhitam.html
@@ -4,6 +4,7 @@
 	<title></title>
 </head>
 <body>
+	<h2>Jintan Hitam</h2>
 <p align="justify">Deskripsi :<br>
 Jintan Hitam / Habbatussauda / dengan nama kerennya Nigella Sativa adalah tumbuhan semak belukar yang mempunyai tinggi tegak kurang lebih sekitar 50-70 cm berdiameter seperti &nbsp;berdaun runcing, bergaris dan barcabang, menyebar dan saling &nbsp;berhadapan, berbulu halus berbunga putih kekuningan. Biji Jinten Hitam berbentuk seperti kapsul yang berwarna biru tua keunguan lebih mendekati hitam dengan ukuran kecil dan pendek kurang lebih 1-2 mm dengan buah yang pahit.serta memiliki aroma yang khassekali. Tumbuhan ini tumbuh liar setiap musim di beberapa daerah di utara Afrika, Asia dan Arab. Jinten hitam merupakan tanaman herbal yang bisa dimanfaatkan sebagai obar, baik secara tunggal maupun dicampur dengan tanaman herbal lainnya.</p>
 
