--- a/jintanhitam.html
+++ b/jintanhitam.html
@@ -1,17 +1,21 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title></title>
+<style>
+p.huruf,h2 {
+    font-family: 'Roboto',sans-serif;line-height:25px
+}
+</style>
 </head>
 <body>
-	<h2>Jintan Hitam</h2>
-<p align="justify">Deskripsi :<br>
+<h2>Jintan Hitam</h2>
+<p align="justify" class="huruf"><b>Deskripsi :</b><br>
 Jintan Hitam / Habbatussauda / dengan nama kerennya Nigella Sativa adalah tumbuhan semak belukar yang mempunyai tinggi tegak kurang lebih sekitar 50-70 cm berdiameter seperti &nbsp;berdaun runcing, bergaris dan barcabang, menyebar dan saling &nbsp;berhadapan, berbulu halus berbunga putih kekuningan. Biji Jinten Hitam berbentuk seperti kapsul yang berwarna biru tua keunguan lebih mendekati hitam dengan ukuran kecil dan pendek kurang lebih 1-2 mm dengan buah yang pahit.serta memiliki aroma yang khassekali. Tumbuhan ini tumbuh liar setiap musim di beberapa daerah di utara Afrika, Asia dan Arab. Jinten hitam merupakan tanaman herbal yang bisa dimanfaatkan sebagai obar, baik secara tunggal maupun dicampur dengan tanaman herbal lainnya.</p>
 
-<p align="center"><a href="https://2.bp.blogspot.com/-0OvJd8lzXao/WhaoKLSPL1I/AAAAAAAAAGU/raPUCvkOzmQUz2F9RkLZKotylCrAPkVzgCLcBGAs/s1600/Jinten_Hitam.jpg" imageanchor="1" style="margin-left: 1em; margin-right: 1em"><img border="0" data-original-height="318" data-original-width="437" height="232" src="https://2.bp.blogspot.com/-0OvJd8lzXao/WhaoKLSPL1I/AAAAAAAAAGU/raPUCvkOzmQUz2F9RkLZKotylCrAPkVzgCLcBGAs/s320/Jinten_Hitam.jpg" width="320" /></a><br>
+<p align="center" class="huruf"><a href="https://2.bp.blogspot.com/-0OvJd8lzXao/WhaoKLSPL1I/AAAAAAAAAGU/raPUCvkOzmQUz2F9RkLZKotylCrAPkVzgCLcBGAs/s1600/Jinten_Hitam.jpg" imageanchor="1" style="margin-left: 1em; margin-right: 1em"><img border="0" data-original-height="318" data-original-width="437" height="232" src="https://2.bp.blogspot.com/-0OvJd8lzXao/WhaoKLSPL1I/AAAAAAAAAGU/raPUCvkOzmQUz2F9RkLZKotylCrAPkVzgCLcBGAs/s320/Jinten_Hitam.jpg" width="320" /></a><br>
 Tanaman herbal Jintan Hitam</p>
 
-<p>
+<p class="huruf">
 Beberapa khasiat dari Jinten Hitam :<br>
 1. Menetralisir racun didalam tubuh<br>
 2. Membasmi bakteri negatif pada saluran pencernaan<br>
@@ -28,7 +32,7 @@ Beberapa khasiat dari Jinten Hitam :<br>
 13. Merupakan sumber nutrisi penting<br>
 </p>
 
-<p align="justify">Referensi :<br>
+<p align="justify" class="huruf"><b>Referensi :</b><br>
 Diriwayatkan dari Aisyah, Rasullah SAW bersabda :<br>
 <i>&quot;Sesungguhnya al-Habbah as-Sauda ini adalah kesembuhan (obat) dari setiap penyakitu kecuali dari as-saam&quot;.</i> Kataku (Aisyah) : <i>&quot;Apa itu as-saam?&quot;,</i> Rasulullah SAW menjawab : <i>&quot;Kematian&quot;.</i><br>
 Diriwayatkan dari Ummu Salamah dan Abu Hurairah R.A, bahwa Rasulullah SAW bersabda :<br>
