--- a/jintanhitam.html
+++ b/jintanhitam.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 p.huruf,h2 {
-    font-family: 'Roboto',sans-serif;line-height:25px
+    font-family: 'Roboto',sans-serif;font-size:15px;line-height:25px
 }
 </style>
 </head>
