--- a/jintanhitam.html
+++ b/jintanhitam.html
@@ -3,8 +3,9 @@
 <head>
 <style>
 p.huruf,h2 {
-    font-family: 'Roboto',sans-serif;font-size:15px;line-height:25px
+    font-family: 'Roboto',sans-serif;font-size:15px;line-height:20px
 }
+h2{font-size:18px;}
 </style>
 </head>
 <body>
