--- a/jintanhitam.html
+++ b/jintanhitam.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 p.huruf,h2 {
-    font-family: 'Roboto',sans-serif;font-size:15px;line-height:20px
+    font-family: 'verdana',sans-serif;font-size:15px;line-height:20px
 }
 h2{font-size:18px;}
 </style>
