--- a/jintanhitam.html
+++ b/jintanhitam.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 p.huruf,h2 {
-    font-family: 'verdana',sans-serif;font-size:14px;line-height:20px;latter-spacing:1px
+    font-family: 'roboto',sans-serif;font-size:14px;line-height:20px;latter-spacing:1px
 }
 h2{font-size:18px;}
 </style>
